--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -1,16 +1,14 @@
 ﻿<html>
 <body>
-<h1 data-bind="text: title"></h1>
+<h1> Exercise 4.2.1</h1>
 
-<input data-bind="textInput: firstName"/>
-<input data-bind="textInput:lastName"/>
-<button data-bind="click: addName">Add Name</button>
-<div data-bind="text: fullName"></div>
-
-<ul data-bind="foreach: names">
+<!--<ul data-bind="foreach: posts">
     <li data-bind="text: $data"></li>
-</ul>
-        
+</ul>-->
+
+    <div id="data"></div>
+
+
 <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
 </html>
