--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -1,14 +1,13 @@
 ﻿<html>
 <body>
-<h1> Exercise 4.2.1</h1>
+    <h1> Exercise 4.2.1</h1>
 
-<!--<ul data-bind="foreach: posts">
-    <li data-bind="text: $data"></li>
-</ul>-->
+    <button data-bind="click: search">Search for posts</button>
 
-    <div id="data"></div>
+    <ul data-bind="foreach: posts">
+        <li data-bind="text: $data.title"></li>
+    </ul>
 
-
-<script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
+    <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
 </html>
