--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -8,6 +8,14 @@
         <li data-bind="text: $data.title"></li>
     </ul>
 
+    <button data-bind="click: prevPage, enable: displayPrev">Prev</button>
+    <button data-bind="click: nextPage, enable: displayNext">Next</button>
+
+    <h1>lol</h1>
+
+    <button onclick="test()"> teststing</button>
+
+
     <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
 </html>
