--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -2,24 +2,39 @@
 <body>
     <h1> Exercise 4.2.1</h1>
 
-    <button data-bind="click: search">Search for posts</button>
-
-    <ul data-bind="foreach: posts">
-        <!--<li data-bind="text: $data.title"></li>-->
-        <li>
-            <a data-bind="attr: { href: $data.link }, text: $data.title"></a>
-        </li>
+    <div data-bind="template: { name: 'posts-template'}"></div>
 
 
-    </ul>
 
-    <button data-bind="click: prevPage, enable: displayPrev">Prev</button>
-    <button data-bind="click: nextPage, enable: displayNext">Next</button>
 
-    <h1>lol</h1>
 
-    <button onclick="test()"> teststing</button>
 
+
+
+
+
+
+
+
+
+
+
+    <script type="text/html" id="posts-template">
+        <button data-bind="click: search">Search for posts</button>
+        <ul data-bind="foreach: posts">
+            <li>
+                <a data-bind="attr: { href: $data.link }, text: $data.title"></a>
+            </li>
+        </ul>
+        <button data-bind="click: prevPage, enable: displayPrev">Prev</button>
+        <button data-bind="click: nextPage, enable: displayNext">Next</button>
+    </script>
+
+
+
+
+    <!--<h1>lol</h1>
+    <button onclick="test()"> teststing</button>-->
 
     <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
