--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -5,17 +5,8 @@
     <!--<div data-bind="template: { name: 'posts-template'}"></div>
     <div data-bind="template: { name: 'post-template' }"></div>-->
 
-
-    <h1> Herunder arbejdes:</h1>
-
-
     <div data-bind="template: { name: getTemplate }"></div>
     <button data-bind="click: toggle">Toggle</button>
-
-
-
-
-
 
 
 
@@ -24,8 +15,8 @@
         <button data-bind="click: search">Search for posts</button>
         <ul data-bind="foreach: posts">
             <li>
-                <a data-bind="attr: { href: $data.link }, text: $data.title"></a>
-                <button data-bind="click: $parent.getPost">Read post</button>
+                <h2 data-bind="text: $data.title, click: $parent.getPost"></h2>
+                <!--<button data-bind="click: getPost">Read post</button>-->
             </li>
         </ul>
         <button data-bind="click: prevPage, enable: displayPrev">Prev</button>
@@ -35,14 +26,18 @@
 
     <script type="text/html" id="post-template">
         <h1 data-bind="text: postTitle"></h1>
-        <h3> Creation Date</h3>
-        <b> Score </b>
-        <div> Body bla bla</div>
-        <p> Link to answers</p>
+        <h3 data-bind="text: creationDate"></h3>
+        <b data-bind="text: score"></b>
+        <div data-bind="html: body"></div>
+        <p data-bind="text: answersLink, click: getAnswers"></pdata-bind="text:>
+        <ul data-bind="foreach: answers">
+            <li>
+                <p data-bind="text: $data.creationDate"></p>
+                <div data-bind="html: $data.body"></div>
+                <p data-bind="text: $data.score"></p>
+            </li>
+        </ul>
     </script>
-
-
-
 
 
 
@@ -50,5 +45,6 @@
     <button onclick="test()"> teststing</button>-->
 
     <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
+    <!--<script src="js/main.js"></script>-->
 </body>
 </html>
