reworked the code

--- a/Exercise4_1/wwwroot/index.html
+++ b/Exercise4_1/wwwroot/index.html
@@ -29,7 +29,6 @@
         <h3 data-bind="text: creationDate"></h3>
         <b data-bind="text: score"></b>
         <div data-bind="html: body"></div>
-        <p data-bind="text: answersLink, click: getAnswers"></pdata-bind="text:>
         <ul data-bind="foreach: answers">
             <li>
                 <p data-bind="text: $data.creationDate"></p>
@@ -41,8 +40,15 @@
 
 
 
-    <!--<h1>lol</h1>
-    <button onclick="test()"> teststing</button>-->
+    <h1>Herunder arbejdes:</h1>
+
+
+
+    <!--<all-posts></all-posts>-->
+
+
+
+    <!--<button onclick="test()"> teststing</button>-->
 
     <script data-main="js/main.js" src="js/lib/requirejs/require.js"></script>
     <!--<script src="js/main.js"></script>-->
